--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,4 @@
 body {
-  background: url('/images/Desktop_-_2_lyhpj1.png');
+  background: url('/images/Desktop_-_2_lyhpj1.webp');
   @apply bg-fixed bg-no-repeat bg-cover;
 }
