--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
 body {
-  background: url('/images/Desktop_-_2_lyhpj1.webp');
+  background: url('/images/app-bg.webp');
   @apply bg-fixed bg-no-repeat bg-cover;
 }
